# wxWidgets-cmake-project

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  example.cpp
